# mouse_motion_sensor

./: .gitignore  README.md
mouse_length_measurement/: main  main.cpp  results.ods  sensor.cpp
pandora_mouse_hardware_interface/: CMakeLists.txt  package.xml
pandora_mouse_hardware_interface/include/pandora_mouse_hardware_interface/: mouse_hardware_interface.h  mouse_pub.h
pandora_mouse_hardware_interface/msg/: mouseMeasurement.msg
pandora_mouse_hardware_interface/src/: mouse_hardware_interface.cpp  mouse_hardware_interface_node.cpp  mouse_node.cpp  mouse_pub.cpp
